--- a/dalipjandir/src/App.css
+++ b/dalipjandir/src/App.css
@@ -1,33 +1,180 @@
-.App {
+#Birds{
+  top: 0;
+  position: absolute;
+}
+
+#Name{
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+  font-size: 35pt;
+  line-height: 35pt;
+  color: white;
+  top: 25%;
+  position: absolute;
+}
+
+.text-center {
+  width: 100%;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.bold-name {
+  font-weight: 600;
+  color: #e91e63;
+
+  animation: flow 8s ease-in-out infinite;
+  background: linear-gradient(-60deg, #03a9f4, #00bcd4, #e73c7e, #ee7752);
+  background-size: 300%;
+
+  -webkit-background-clip: text;
+  /*-moz-background-clip: text;*/
+  /*background-clip: text;*/
+
+  -webkit-text-fill-color: transparent;
+  /*text-fill-color: transparent;*/
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@keyframes flow {
+
+  0% {background-position: 0 50%;}
+
+  50% {background-position: 100% 50%;}
+
+  100% {background-position: 0 50%;}
+  
 }
 
-.App-link {
-  color: #61dafb;
+#startButton {
+  margin: 0;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+
+  border:0;
+  border-radius: 10px;
+  width: 250px;
+
+  font-family: 'Raleway', sans-serif;
+  font-size: 35pt;
+  font-weight: 600;
+
+  animation: flow 8s ease-in-out infinite;
+  background: linear-gradient(-60deg, #03a9f4, #00bcd4, #e73c7e, #ee7752);
+  background-size: 300%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.top-layer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: -100%;
+  left: 0;
+  bottom: auto;
+  right: auto;
+  background: #03a9f4;
+  transition: 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
+  transition-delay: 0.2s;
+}
+.top-layer.active {
+  top: 100%;
+}
+
+.top-layer--2 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: -100%;
+  left: 0;
+  bottom: auto;
+  right: auto;
+  transition: 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
+  background: #1de9b6;
+  transition-delay: 0.6s;
+}
+.top-layer--2.active{
+  top: 100%;
+}
+
+.top-layer--3 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: -100%;
+  left: 0;
+  bottom: auto;
+  right: auto;
+  transition: 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
+  background: #00bcd4;
+  transition-delay: 0.4s;
+}
+.top-layer--3.active{
+  top: 100%;
+}
+
+.top-layer--4 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: -100%;
+  left: 0;
+  bottom: auto;
+  right: auto;
+  transition: 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
+  background: #ff4081;
+  transition-delay: 0.1s;
+}
+.top-layer--4.active{
+  top: 100%;
+}
+
+.top-layer--5 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: -100%;
+  left: 0;
+  bottom: auto;
+  right: auto;
+  transition: 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
+  background: #e73c7e;
+}
+.top-layer--5.active{
+  top: 100%;
+}
+
+#takeThis{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: -100%;
+  left: 0;
+  bottom: auto;
+  right: auto;
+  transition: 0.8s cubic-bezier(0.6, 0.05, 0.4, 1);
+  background: BLACK;
+  transition-delay: 0.7s;
+}
+#takeThis.active{
+  top: 0;
+}
+
+#dangerous{
+  position: absolute;
+  top: 20%;
+  font-family: 'VT323', monospace;
+  font-size: 50pt;
+  color: WHITE;
+}
+
+#wRow{
+  width: 100%;
+  position: absolute;
+  top: 60%;
+}
+
+.weapons {
+  width: 50%;
+  color: WHITE;
 }
