--- a/dalipjandir/src/App.css
+++ b/dalipjandir/src/App.css
@@ -1,180 +1,121 @@
 #Birds{
-  top: 0;
-  position: absolute;
+    top: 0;
+    position: absolute;
 }
 
 #Name{
-  font-family: 'Raleway', sans-serif;
-  font-weight: 400;
-  font-size: 35pt;
-  line-height: 35pt;
-  color: white;
-  top: 25%;
-  position: absolute;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 400;
+    font-size: 35pt;
+    line-height: 35pt;
+    color: white;
+    top: 25%;
+    position: absolute;
 }
 
 .text-center {
-  width: 100%;
-  text-align: center;
+    width: 100%;
+    text-align: center;
 }
 
 .bold-name {
-  font-weight: 600;
-  color: #e91e63;
+    font-weight: 600;
+    color: #e91e63;
 
-  animation: flow 8s ease-in-out infinite;
-  background: linear-gradient(-60deg, #03a9f4, #00bcd4, #e73c7e, #ee7752);
-  background-size: 300%;
-
-  -webkit-background-clip: text;
-  /*-moz-background-clip: text;*/
-  /*background-clip: text;*/
-
-  -webkit-text-fill-color: transparent;
-  /*text-fill-color: transparent;*/
+    animation: flow 8s ease-in-out infinite;
+    background: linear-gradient(-60deg, #03a9f4, #00bcd4, #e73c7e, #ee7752);
+    background-size: 300%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 @keyframes flow {
 
-  0% {background-position: 0 50%;}
+    0% {background-position: 0 50%;}
 
-  50% {background-position: 100% 50%;}
+    50% {background-position: 100% 50%;}
 
-  100% {background-position: 0 50%;}
-  
+    100% {background-position: 0 50%;}
+
 }
 
 #startButton {
-  margin: 0;
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+    margin: 0;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 
-  border:0;
-  border-radius: 10px;
-  width: 250px;
+    border:0;
+    border-radius: 10px;
+    width: 250px;
 
-  font-family: 'Raleway', sans-serif;
-  font-size: 35pt;
-  font-weight: 600;
+    font-family: 'Raleway', sans-serif;
+    font-size: 35pt;
+    font-weight: 600;
 
-  animation: flow 8s ease-in-out infinite;
-  background: linear-gradient(-60deg, #03a9f4, #00bcd4, #e73c7e, #ee7752);
-  background-size: 300%;
-}
-
-.top-layer {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: -100%;
-  left: 0;
-  bottom: auto;
-  right: auto;
-  background: #03a9f4;
-  transition: 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
-  transition-delay: 0.2s;
-}
-.top-layer.active {
-  top: 100%;
-}
-
-.top-layer--2 {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: -100%;
-  left: 0;
-  bottom: auto;
-  right: auto;
-  transition: 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
-  background: #1de9b6;
-  transition-delay: 0.6s;
-}
-.top-layer--2.active{
-  top: 100%;
-}
-
-.top-layer--3 {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: -100%;
-  left: 0;
-  bottom: auto;
-  right: auto;
-  transition: 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
-  background: #00bcd4;
-  transition-delay: 0.4s;
-}
-.top-layer--3.active{
-  top: 100%;
-}
-
-.top-layer--4 {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: -100%;
-  left: 0;
-  bottom: auto;
-  right: auto;
-  transition: 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
-  background: #ff4081;
-  transition-delay: 0.1s;
-}
-.top-layer--4.active{
-  top: 100%;
-}
-
-.top-layer--5 {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: -100%;
-  left: 0;
-  bottom: auto;
-  right: auto;
-  transition: 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
-  background: #e73c7e;
-}
-.top-layer--5.active{
-  top: 100%;
+    animation: flow 8s ease-in-out infinite;
+    background: linear-gradient(-60deg, #03a9f4, #00bcd4, #e73c7e, #ee7752);
+    background-size: 300%;
 }
 
 #takeThis{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: -100%;
-  left: 0;
-  bottom: auto;
-  right: auto;
-  transition: 0.8s cubic-bezier(0.6, 0.05, 0.4, 1);
-  background: BLACK;
-  transition-delay: 0.7s;
+    position: absolute;
+    width: 100%;
+    min-height: 100%;
+    height: auto;
+    top: 100%;
+    left: 0;
+    bottom: auto;
+    right: auto;
+    transition: 1s cubic-bezier(0.6, 0.05, 0.4, 1);
+    background: #262933;
 }
 #takeThis.active{
-  top: 0;
+    top: 0;
 }
+
+#takeCont{
+    font-family: 'VT323', monospace;
+    color: WHITE;
+}
+#takeCont.active {
+    animation: fadeIn 8s;
+    animation-delay: 0.2s;
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
 
 #dangerous{
-  position: absolute;
-  top: 20%;
-  font-family: 'VT323', monospace;
-  font-size: 50pt;
-  color: WHITE;
+    margin-top: 60px;
+    font-size: 60pt;
 }
 
-#wRow{
-  width: 100%;
-  position: absolute;
-  top: 60%;
+#wRow {
+    margin-top: 10px;
+    margin-bottom: 0;
+    font-size: 50pt;
 }
 
-.weapons {
-  width: 50%;
-  color: WHITE;
+.weapons:hover{
+    animation: flow 8s ease-in-out infinite;
+    background: linear-gradient(-60deg, #03a9f4, #00bcd4, #e73c7e, #ee7752);
+    background-size: 300%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.mode{
+    color: WHITE;
+}
+
+.weaponDesc{
+    margin-top: 10px;
+    font-size: 30pt;
+    color: WHITE;
 }
