Completed Character Info page

--- a/dalipjandir/src/resources/css/App.css
+++ b/dalipjandir/src/resources/css/App.css
@@ -29,15 +29,15 @@
     -webkit-text-fill-color: transparent;
 }
 
-@keyframes flow {
+/*@keyframes flow {*/
 
-    0% {background-position: 0 50%;}
+/*    0% {background-position: 0 50%;}*/
 
-    50% {background-position: 100% 50%;}
+/*    50% {background-position: 100% 50%;}*/
 
-    100% {background-position: 0 50%;}
+/*    100% {background-position: 0 50%;}*/
 
-}
+/*}*/
 
 #startButton {
     margin: 0;
