--- a/dalipjandir/src/resources/css/About.css
+++ b/dalipjandir/src/resources/css/About.css
@@ -4,14 +4,24 @@
     height: auto;
     min-height: 100%;
     background-color: #171f29;
-    color: #57bfc7;
+    color: #6cf0e5;
     font-family: 'Raleway', sans-serif;
 }
 
-h1{
+h1 {
     margin-top: 40px;
     font-weight: 600;
     font-size: 45pt;
+}
+
+h2 {
+    font-size: 25pt;
+    font-weight: 600;
+}
+
+.text-center {
+    width: 100%;
+    text-align: center;
 }
 
 #underline {
@@ -19,7 +29,7 @@ h1{
     background-size: 150%;
     animation: flow 6s ease-in-out infinite;
     margin: 0 auto 15px;
-    width: 260px;
+    width: 300px;
     height: 10px;
 }
 
@@ -28,7 +38,7 @@ h1{
     background-size: 160%;
     animation: flow 8s ease-in-out infinite;
     margin: 0 auto;
-    width: 160px;
+    width: 200px;
     height: 10px;
 }
 
@@ -43,25 +53,50 @@ h1{
 }
 
 #meImg {
-    width: 200px;
-    height: 200px;
+    width: 180px;
+    height: 180px;
     border-radius: 50%;
+
+    background: linear-gradient(-60deg, #ee7752, #e73c7e, #00bcd4, #57bfc7);
+    background-size: 180%;
+    animation: flow 8s ease-in-out infinite;
 
     display: block;
     margin: 10px auto 10px auto;
 }
 
 #race {
-    background: linear-gradient(-60deg, #7fafcf, #74e4bb);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
     font-weight: 600;
     font-size: 25pt;
+}
+
+.bio-icons {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
 }
 
 #dalip-info {
     margin-left: 30px;
     font-size: 15pt;
+    font-weight: 600;
+}
+
+.trait-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75px;
+    height: 75px;
+}
+
+.trait-head {
+    font-size: 15pt;
+    font-weight: 600;
+}
+
+.trait-text {
+    font-size: 12pt;
     font-weight: 600;
 }
 
@@ -71,8 +106,8 @@ h1{
 }
 
 .skillImg {
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
     filter: brightness(0) invert(1);
     transition: 0.5s ease;
 
@@ -91,7 +126,7 @@ h1{
 }
 
 .skill-col-1 {
-    color: #00e5ff
+    color: #00e5ff;
 }
 
 .skill-col-2 {
