--- a/dalipjandir/src/resources/css/QuestJournal.css
+++ b/dalipjandir/src/resources/css/QuestJournal.css
@@ -1,5 +1,6 @@
 #quest-journal{
     position: absolute;
+    top: 300%;
     width: 100%;
     height: auto;
     min-height: 100%;
@@ -9,29 +10,69 @@
     font-weight: 600;
 }
 
-h3 {
+h1 {
+    margin-top: 40px;
+    font-weight: 600;
+    font-size: 45pt;
+
+    animation: flow 4s ease-in-out infinite;
+    background: linear-gradient(-60deg, #03a9f4, #00bcd4, #e73c7e, #ee7752);
+    background-size: 120%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+@keyframes flow {
+
+    0% {background-position: 0 50%;}
+
+    50% {background-position: 100% 50%;}
+
+    100% {background-position: 0 50%;}
+}
+
+h2 {
+    font-size: 25pt;
     font-weight: 600;
 }
 
-.wrapper {
-    position: absolute;
-    top: 10%;
-    left: 40%;
+.text-center {
+    width: 100%;
+    text-align: center;
+}
+
+#underline {
+    background: linear-gradient(-60deg, #57bfc7, #00bcd4, #e73c7e, #ee7752);
+    background-size: 150%;
+    animation: flow 6s ease-in-out infinite;
+    margin: 0 auto 15px;
     width: 300px;
-    height: 500px;
+    height: 10px;
+}
+
+#smallUnderline {
+    background: linear-gradient(-60deg, #ee7752, #e73c7e, #00bcd4, #57bfc7);
+    background-size: 160%;
+    animation: flow 8s ease-in-out infinite;
+    margin: 0 auto;
+    width: 200px;
+    height: 10px;
+}
+
+.wrapper {
+    margin: auto;
+    width: 400px;
+    height: 650px;
     perspective: 900px;
 }
 
 .card {
-    position: absolute;
     top: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(0deg, #00bcd4, #e73c7e);
     transition: .5s all ease;
-    transform: rotateX(60deg) scale(0.7);
-    perspective: 900px;
-    box-shadow: 0 20px 50px #555;
+    transform: rotateX(50deg) scale(0.7);
+    box-shadow: 0 20px 50px BLACK;
     animation: entry 1s linear 1;
 }
 
@@ -42,16 +83,59 @@ h3 {
     z-index: 400;
 }
 
-#c1 {
-    color: BLACK;
-    background: linear-gradient(0deg, #ee7752, #57bfc7);
-    position: absolute;
-    left: 100%;
+.card.hide {
+    transform: rotateX(90deg) scale(0.7);
+    visibility: hidden;
 }
 
-#c2 {
+@keyframes entry {
+    0% {
+        top: -20%;
+        opacity: 0.1;
+    }
+    100% {
+        top: 0%;
+    }
+}
+
+.quest-title {
+    font-size: 50pt;
+    font-weight: 800;
+    margin-top: 10px;
+    margin-left: 10px;
+    line-height: 60px;
+}
+
+.quest-orange {
     color: BLACK;
-    background: linear-gradient(0deg, #ee7752, #57bfc7);
-    position: absolute;
-    left: -100%;
+    background: linear-gradient(30deg, #ffab91, #57bfc7);
+}
+
+.quest-pink {
+    color: WHITE;
+    background: linear-gradient(30deg, #00bcd4, #e73c7e);
+}
+
+.quest-type-white {
+    width: 250px;
+    height: 250px;
+    transition: 0.5s ease;
+
+    display: block;
+    margin: auto;
+    vertical-align: middle;
+
+    filter: brightness(0) invert(1);
+}
+
+.quest-type-black {
+    width: 300px;
+    height: 300px;
+    transition: 0.5s ease;
+
+    display: block;
+    margin: auto;
+    vertical-align: middle;
+
+    filter: brightness(0);
 }
