--- a/dalipjandir/src/resources/css/QuestJournal.css
+++ b/dalipjandir/src/resources/css/QuestJournal.css
@@ -13,7 +13,7 @@
 h1 {
     margin-top: 40px;
     font-weight: 600;
-    font-size: 45pt;
+    font-size: 55pt;
 
     animation: flow 4s ease-in-out infinite;
     background: linear-gradient(-60deg, #03a9f4, #00bcd4, #e73c7e, #ee7752);
@@ -151,6 +151,14 @@ h2 {
     vertical-align: middle;
 
     filter: brightness(0);
+}
+
+.project-title {
+    font-size: 35pt;
+    font-weight: 800;
+    margin-top: 10px;
+    margin-left: 10px;
+    line-height: 60px;
 }
 
 .training-wrapper {
