--- a/dalipjandir/src/resources/css/QuestJournal.css
+++ b/dalipjandir/src/resources/css/QuestJournal.css
@@ -82,6 +82,13 @@ h2 {
     display: none;
 }
 
+.row > div {
+    -webkit-transition: all 0.6s ease-in-out;
+    -moz-transition: all 0.6s ease-in-out;
+    -o-transition: all 0.6s ease-in-out;
+    transition: all 0.6s ease-in-out;
+}
+
 .quest-row {
     display: flex;
     position: absolute;
@@ -139,7 +146,7 @@ h2 {
     transition: .5s all ease;
 }
 .wrapper.clicked {
-    width: 90%;
+    width: 90%
 }
 
 .card {
@@ -147,8 +154,7 @@ h2 {
     width: 100%;
     height: 100%;
     transition: .5s all ease;
-    box-shadow: 0 20px 50px BLACK;
-}
+    box-shadow: 0 20px 50px BLACK;}
 
 .quest-wrapper {
     z-index: 1;
