--- a/dalipjandir/src/resources/css/QuestJournal.css
+++ b/dalipjandir/src/resources/css/QuestJournal.css
@@ -3,7 +3,7 @@
     top: 300%;
     width: 100%;
     height: auto;
-    min-height: 110%;
+    min-height: 105%;
     background-color: #171f29;
     color: WHITE;
     font-family: 'Raleway', sans-serif;
@@ -85,7 +85,7 @@ h2 {
     display: none;
 }
 
-.row > div {
+.anim-row {
     -webkit-transition: all 0.6s ease-in-out;
     -moz-transition: all 0.6s ease-in-out;
     -o-transition: all 0.6s ease-in-out;
