--- a/dalipjandir/src/resources/css/QuestJournal.css
+++ b/dalipjandir/src/resources/css/QuestJournal.css
@@ -227,6 +227,14 @@ h2 {
     filter: brightness(0);
 }
 
+.exp-img {
+    width: 200px;
+    height: 200px;
+    transition: 0.5s ease;
+    margin: 20px auto 20px auto;
+    display: inherit;
+}
+
 .exp-row {
     width: 80%;
     margin-bottom: 50px;
@@ -235,17 +243,17 @@ h2 {
 
 .exp-card {
     width: 100%;
+    transition: ease-in-out .5s;
 }
 
 .card-rounded {
-    border-radius: 30px;
+    border-radius: 25px;
 }
 
 .project-title {
-    font-size: 35pt;
+    font-size: 28pt;
     font-weight: 800;
-    margin-top: 10px;
-    margin-left: 20px;
+    margin-top: 20px;
     line-height: 60px;
 }
 
@@ -285,8 +293,8 @@ h2 {
 }
 
 .card-skill-img {
-    display: block;
-    margin: 30px auto 0 auto;
+    display: inherit;
+    margin: 20px auto 0 auto;
     width: 90px;
     height: 90px;
 }
