Added git link for FIA

--- a/dalipjandir/src/resources/css/QuestJournal.css
+++ b/dalipjandir/src/resources/css/QuestJournal.css
@@ -22,6 +22,15 @@ h1 {
     -webkit-text-fill-color: transparent;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+figcaption {
+    text-align: center;
+}
+
 @keyframes flow {
 
     0% {background-position: 0 50%;}
@@ -199,7 +208,7 @@ h2 {
 
 .card-orange {
     color: BLACK;
-    background: linear-gradient(30deg, #ffc1a9, #ecbae3);
+    background: linear-gradient(30deg, #ffb07f, #ecbae3);
     height: 100%;
 }
 
@@ -314,4 +323,9 @@ h2 {
 
 .animate-height {
     width: 100%;
+}
+
+.git-img {
+    height: 100px;
+    width: 100px;
 }
