--- a/dalipjandir/src/resources/css/QuestJournal.css
+++ b/dalipjandir/src/resources/css/QuestJournal.css
@@ -111,6 +111,7 @@ h2 {
     top: 200px;
     width: 100%;
     height: auto;
+    margin: 0;
     z-index: -1;
 }
 .training-row.show {
@@ -123,6 +124,7 @@ h2 {
     top: 200px;
     width: 100%;
     height: auto;
+    margin: 0;
     z-index: -1;
 }
 .main-row.show {
@@ -135,6 +137,7 @@ h2 {
     top: 200px;
     width: 100%;
     height: auto;
+    margin: 0;
     z-index: -1;
 }
 .side-row.show {
