Moved take this to its own file for now

--- a/dalipjandir/src/resources/css/About.css
+++ b/dalipjandir/src/resources/css/About.css
@@ -1,5 +1,6 @@
 #about{
-    position: absolute;
+    position: relative;
+    top: 100%;
     width: 100%;
     height: auto;
     min-height: 100%;
