--- a/dalipjandir/src/resources/css/About.css
+++ b/dalipjandir/src/resources/css/About.css
@@ -26,6 +26,14 @@ h2 {
     font-weight: 600;
 }
 
+#page-top {
+    width: 100%;
+    height: 10px;
+    background: linear-gradient(-60deg, #57bfc7, #00bcd4, #e73c7e, #ee7752);
+    background-size: 150%;
+    animation: flow 6s ease-in-out infinite;
+}
+
 .text-center {
     width: 100%;
     text-align: center;
