--- a/dalipjandir/src/resources/css/App.css
+++ b/dalipjandir/src/resources/css/App.css
@@ -16,7 +16,7 @@
     font-size: 35pt;
     line-height: 35pt;
     color: white;
-    top: 25%;
+    top: 20%;
     position: fixed;
 }
 
@@ -48,7 +48,7 @@
 
 #btn-container {
     position: fixed;
-    top: 60%;
+    top: 65%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
@@ -135,4 +135,14 @@
     margin-top: 10px;
     font-size: 30pt;
     color: WHITE;
+}
+
+.portfolio-img {
+    width: 50px;
+    height: 50px;
+    margin: 10px
+}
+
+.center-div {
+    margin: auto;
 }
