--- a/dalipjandir/src/resources/css/App.css
+++ b/dalipjandir/src/resources/css/App.css
@@ -55,8 +55,8 @@
     width: 100%;
 }
 
-#startButton {
-    margin: 10px auto;
+.homeButton {
+    margin: 10px 80px;
 
     border:0;
     border-radius: 10px;
