Fixed lag, made fixed intro to absolute

--- a/dalipjandir/src/resources/css/App.css
+++ b/dalipjandir/src/resources/css/App.css
@@ -2,12 +2,8 @@
     top: 0;
     min-height: 100%;
     height: auto;
-    position: relative;
-}
-
-#birds {
-    top: 0;
-    position: fixed;
+    width: 100%;
+    position: absolute;
 }
 
 #name {
@@ -17,7 +13,7 @@
     line-height: 35pt;
     color: white;
     top: 20%;
-    position: fixed;
+    position: absolute;
 }
 
 .text-center {
@@ -36,30 +32,12 @@
     -webkit-text-fill-color: transparent;
 }
 
-/*@keyframes flow {*/
-
-/*    0% {background-position: 0 50%;}*/
-
-/*    50% {background-position: 100% 50%;}*/
-
-/*    100% {background-position: 0 50%;}*/
-
-/*}*/
-
-#btn-container {
-    position: fixed;
-    top: 65%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    width: 100%;
-}
-
 .homeButton {
-    margin: 10px 80px;
+    margin: 20px auto;
 
     border:0;
     border-radius: 10px;
+    height: 75px;
     width: 250px;
 
     font-family: 'Raleway', sans-serif;
