--- a/dalipjandir/src/resources/css/ContactMe.css
+++ b/dalipjandir/src/resources/css/ContactMe.css
@@ -46,17 +46,27 @@
     right: 0;
 }
 
-#name-input {
+.contact-box {
     margin: 10px auto;
-    width: 38%;
+    width: 50%;
+    font-weight: 600;
+    max-width: 600px;
+    min-width: 400px;
 }
 
-#email-input {
+
+#submit {
     margin: 10px auto;
-    width: 38%;
+    width: 200px;
+    background: #171f29;
+    color: white;
+    display: block;
+    font-weight: 600;
 }
 
-#message-input {
-    margin: 10px auto;
-    width: 38%;
+.portfolio-btn {
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    filter: brightness(0) invert(1);
 }
